--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,5 @@ jobs:
 
     - name: Setup build deps
       run: |
-          sudo apt install g++-11-aarch64-linux-gnu libstdc++-11-dev-arm64-cross gcc-11 g++-11
+          sudo apt install g++-11-aarch64-linux-gnu libstdc++-11-dev-arm64-cross
         
