--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: android-wrapper-llvm-msvc-build
 
 permissions:
   contents: write
@@ -13,12 +13,74 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04]
+        os: [ubuntu-latest]
     env:
       BUILD_TYPE: Release
     steps:
 
     - name: Setup build deps
       run: |
-          sudo apt -y install g++-11-aarch64-linux-gnu
+          sudo wget -qO /usr/local/bin/ninja.gz https://github.com/ninja-build/ninja/releases/latest/download/ninja-linux.zip \
+          && wget -nv https://github.com/backengineering/llvm-msvc/releases/download/llvm-msvc-v3.2.9/android-wrapper-llvm-msvc.zip && 7z x android-wrapper-llvm-msvc.zip
+          && sudo gunzip /usr/local/bin/ninja.gz \
+          && sudo chmod a+x /usr/local/bin/ninja \
+          && sudo apt-get install build-essential make cmake \
+          && sudo apt-get install p7zip-full p7zip-rar \
+          && sudo apt-get install libstdc++-11-dev-arm64-cross gcc-11 g++-11
+          
+    - name: Checkout Repo
+      uses: actions/checkout@v3
+      with:
+          path: llvm-msvc
+          submodules: 'recursive'
+
+    - name: Build runtimes
+      run: |
+        cmake -GNinja -Bruntimes-build \
+        -DCMAKE_INSTALL_PREFIX=install \
+        -DLLVM_ENABLE_RUNTIMES="libcxx;libcxxabi;libunwind" \
+        -DCMAKE_C_COMPILER=$(pwd)/install/bin/clang \
+        -DCMAKE_CXX_COMPILER=$(pwd)/install/bin/clang++ \
+        -DCMAKE_EXE_LINKER_FLAGS="-fuse-ld=lld" \
+        -DCMAKE_SHARED_LINKER_FLAGS="-fuse-ld=lld" \
+        -DCMAKE_C_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_CXX_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_C_FLAGS="-Wno-error -std=gnu11" \
+        -DCMAKE_CXX_FLAGS="-Wno-error -std=c++20" \
+        -DCMAKE_CXX_COMPILER_WORKS=1 \
+        -DCMAKE_CXX_COMPILER_ID=Clang \
+        -DLIBCXX_INCLUDE_BENCHMARKS=OFF \
+        llvm-msvc/runtimes
+        time cmake --build runtimes-build --config ${{ env.BUILD_TYPE }}
+        cmake --build runtimes-build --config ${{ env.BUILD_TYPE }} --target install
+
+    - name: Build compiler-rt
+      run: |
+        cmake -GNinja -Bcompiler-rt-build \
+        -DCMAKE_INSTALL_PREFIX=install \
+        -DCOMPILER_RT_BUILD_BUILTINS=ON \
+        -DCOMPILER_RT_BUILD_LIBFUZZER=ON \
+        -DCOMPILER_RT_BUILD_MEMPROF=ON \
+        -DCOMPILER_RT_BUILD_PROFILE=ON \
+        -DCOMPILER_RT_BUILD_SANITIZERS=ON \
+        -DCOMPILER_RT_BUILD_XRAY=ON \
+        -DCOMPILER_RT_DEFAULT_TARGET_ONLY=ON \
+        -DCMAKE_EXE_LINKER_FLAGS="-fuse-ld=lld" \
+        -DCMAKE_SHARED_LINKER_FLAGS="-fuse-ld=lld" \
+        -DCMAKE_ASM_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_C_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_CXX_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_C_COMPILER=$(pwd)/install/bin/clang \
+        -DCMAKE_CXX_COMPILER=$(pwd)/install/bin/clang++ \
+        -DLLVM_CONFIG_PATH=$(pwd)/install/bin/llvm-config \
+        -DCMAKE_AR=$(pwd)/install/bin/llvm-ar \
+        -DCMAKE_NM=$(pwd)/install/bin/llvm-nm \
+        -DCMAKE_CXX_COMPILER_WORKS=1 \
+        -DCMAKE_CXX_COMPILER_ID=Clang \
+        -DLIBCXX_INCLUDE_BENCHMARKS=OFF \
+        -DCMAKE_C_FLAGS="-Wno-error -std=gnu11" \
+        -DCMAKE_CXX_FLAGS="-Wno-error -std=c++20" \
+        llvm-msvc/compiler-rt
+        time cmake --build compiler-rt-build --config ${{ env.BUILD_TYPE }}
+        cmake --build compiler-rt-build --config ${{ env.BUILD_TYPE }} --target install
         
