--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
       with:
+          repository: backengineering/llvm-msvc
           path: llvm-msvc
           submodules: 'recursive'
 
