--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,8 +44,8 @@ jobs:
         -DCMAKE_CXX_COMPILER=$(pwd)/install/bin/clang++ \
         -DCMAKE_EXE_LINKER_FLAGS="-fuse-ld=lld" \
         -DCMAKE_SHARED_LINKER_FLAGS="-fuse-ld=lld" \
-        -DCMAKE_C_COMPILER_TARGET="aarch64-linux-android21" \
-        -DCMAKE_CXX_COMPILER_TARGET="aarch64-linux-android21" \
+        -DCMAKE_C_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_CXX_COMPILER_TARGET="aarch64-linux-gnu" \
         -DCMAKE_C_FLAGS="-Wno-error -std=gnu11" \
         -DCMAKE_CXX_FLAGS="-Wno-error -std=c++20" \
         -DCMAKE_CXX_COMPILER_WORKS=1 \
@@ -68,9 +68,9 @@ jobs:
         -DCOMPILER_RT_DEFAULT_TARGET_ONLY=ON \
         -DCMAKE_EXE_LINKER_FLAGS="-fuse-ld=lld" \
         -DCMAKE_SHARED_LINKER_FLAGS="-fuse-ld=lld" \
-        -DCMAKE_ASM_COMPILER_TARGET="aarch64-linux-android21" \
-        -DCMAKE_C_COMPILER_TARGET="aarch64-linux-android21" \
-        -DCMAKE_CXX_COMPILER_TARGET="aarch64-linux-android21" \
+        -DCMAKE_ASM_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_C_COMPILER_TARGET="aarch64-linux-gnu" \
+        -DCMAKE_CXX_COMPILER_TARGET="aarch64-linux-gnu" \
         -DCMAKE_C_COMPILER=$(pwd)/install/bin/clang \
         -DCMAKE_CXX_COMPILER=$(pwd)/install/bin/clang++ \
         -DLLVM_CONFIG_PATH=$(pwd)/install/bin/llvm-config \
